Add pharmacy deposit API
